--- a/src/components/pages/Admin/adminstudent.css
+++ b/src/components/pages/Admin/adminstudent.css
@@ -103,7 +103,7 @@ tr:nth-child(even) {
 }
 
 
-.chatcontainer{   color: white !important;
+.admindashchatcontainer{   color: white !important;
     height: 1.6rem !important;text-align: center;
     width: 5rem !important;
 
